--- a/Design/managementApp.csproj
+++ b/Design/managementApp.csproj
@@ -93,6 +93,7 @@
     <Compile Include="CategoryWindow.xaml.cs">
       <DependentUpon>CategoryWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Context\Common.cs" />
     <Compile Include="Context\ShopGameContext.cs" />
     <Compile Include="DrawColummChart.xaml.cs">
       <DependentUpon>DrawColummChart.xaml</DependentUpon>
@@ -103,13 +104,9 @@
     <Compile Include="DrawPieChart.xaml.cs">
       <DependentUpon>DrawPieChart.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201912161543152_firstMigration.cs" />
-    <Compile Include="Migrations\201912161543152_firstMigration.designer.cs">
-      <DependentUpon>201912161543152_firstMigration.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201912161551068_firstMigration1.cs" />
-    <Compile Include="Migrations\201912161551068_firstMigration1.designer.cs">
-      <DependentUpon>201912161551068_firstMigration1.cs</DependentUpon>
+    <Compile Include="Migrations\201912171751165_firstMigration.cs" />
+    <Compile Include="Migrations\201912171751165_firstMigration.designer.cs">
+      <DependentUpon>201912171751165_firstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BaseModel.cs" />
@@ -207,11 +204,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\201912161543152_firstMigration.resx">
-      <DependentUpon>201912161543152_firstMigration.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201912161551068_firstMigration1.resx">
-      <DependentUpon>201912161551068_firstMigration1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201912171751165_firstMigration.resx">
+      <DependentUpon>201912171751165_firstMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
