--- a/Design/App.config
+++ b/Design/App.config
@@ -15,6 +15,6 @@
         </providers>      
     </entityFramework>
   <connectionStrings>
-    <add name="DBGames" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-JFQ7LI7;Initial Catalog=DBGames;Integrated Security=True" />
+    <add name="DBGames" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-MQ1C5LQ\SQLEXPRESS;Initial Catalog=DBGames;Integrated Security=True" />
   </connectionStrings>
 </configuration>
