--- a/Design/managementApp.csproj
+++ b/Design/managementApp.csproj
@@ -90,9 +90,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Adapter\AmountRequest.cs" />
     <Compile Include="Adapter\PieStatistic.cs" />
     <Compile Include="Adapter\ColumnStatistic.cs" />
     <Compile Include="Adapter\LineStatistic.cs" />
+    <Compile Include="Adapter\PaymentRequest.cs" />
+    <Compile Include="Adapter\Request.cs" />
     <Compile Include="Adapter\Statistic.cs" />
     <Compile Include="CategoryWindow.xaml.cs">
       <DependentUpon>CategoryWindow.xaml</DependentUpon>
@@ -108,9 +111,9 @@
     <Compile Include="DrawPieChart.xaml.cs">
       <DependentUpon>DrawPieChart.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202001170231425_firstMigration.cs" />
-    <Compile Include="Migrations\202001170231425_firstMigration.designer.cs">
-      <DependentUpon>202001170231425_firstMigration.cs</DependentUpon>
+    <Compile Include="Migrations\202001171509059_firstMigration.cs" />
+    <Compile Include="Migrations\202001171509059_firstMigration.designer.cs">
+      <DependentUpon>202001171509059_firstMigration.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\BaseModel.cs" />
@@ -212,8 +215,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <EmbeddedResource Include="Migrations\202001170231425_firstMigration.resx">
-      <DependentUpon>202001170231425_firstMigration.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202001171509059_firstMigration.resx">
+      <DependentUpon>202001171509059_firstMigration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
